--- a/index.html
+++ b/index.html
@@ -45,6 +45,23 @@
 
     <h1>IP Address Tracker</h1>
 
+    <div class="wrap">
+      <div class="search">
+        <input
+          type="text"
+          class="searchTerm"
+          placeholder="Search for any IP address or domain"
+        />
+        <button type="submit" class="searchButton">
+          <i class="fa fa-angle-right"></i>
+        </button>
+      </div>
+    </div>
+
     <script src=""></script>
+    <script
+      src="https://kit.fontawesome.com/91e18c41ba.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
