--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       >. Coded by <a href="#">Your Name Here</a>.
     </div> -->
 
-    <h1>IP Address Tracker</h1>
+    <h1 class="title">IP Address Tracker</h1>
 
     <div class="wrap">
       <div class="search">
@@ -55,6 +55,16 @@
         <button type="submit" class="searchButton">
           <i class="fa fa-angle-right"></i>
         </button>
+      </div>
+    </div>
+
+    <div class="banner">
+      <div class="banner-column">
+        <div class="card">
+          <h3>Card 1</h3>
+          <p>Some text</p>
+          <p>Some text</p>
+        </div>
       </div>
     </div>
 
